# DevOps_Capstone

./: .gitignore  Dagster.Dockerfile  Dockerfile  Makefile  README.md  build_app_image.sh  dagster.yaml  dev_requirements.txt  docker_commands.sh  docker_commands_documentation.sh  install.sh  pylintrc  pyproject.toml  requirements.txt  workspace.yaml
.circleci/: config.yml  config_wip.yml
archive/: dagster_sample.yaml
cloudformation/: README.md  app_dbs_server.yaml  app_network.yaml  app_network_parameters.json  create_stack.sh  delete_stack.sh  eksclt-cluster.yaml  network.yaml  update_stack.sh
dagster/: .dockerignore  Daemon.Dockerfile  Dockerfile  README.md  build_image.sh  cleanup_docker_image.sh  dagster.yaml  docker-compose-prod-overrides.yml  docker-compose-prod.yml  docker-compose.yml  docker-deploy.sh  docker-kubernetes-deploy.sh  test_image.sh  workspace.yaml
dagster_capstone/: README.md  dagster.yaml  setup.py  workspace.yaml
database_dagster/: Dockerfile  README.md  build_db_image.sh  init_dagster_db.sh  run_db_image.sh
docker/: Dagster.Dockerfile  README.md  build_dagster_image.sh  build_db_image.sh  build_image.sh  build_web_app_image.sh  cleanup_docker_image.sh  deploy_docker_image.sh  deploy_docker_images.sh  install_documentation.sh  test_image.sh
frontend_web_app/: README.md  app.py
kubernetes/: dagster-cluster.yaml  dagster-deployment-blue.yaml  dagster-deployment-green.yaml  dagster-deployment.yaml  dagster-service-account.yaml  dagster-service.yaml  delete-cluster.sh
sample_app/: app.py
selenium_tests/: smoke_test.py
(+27 files in other folders)
