[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Udacity Capstone for DevOps Engineering.  Creating a data monitoring app."
authors = ["Ugochi Jones <ugochi@jonestechnicalenterprises.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
