[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Udacity Capstone for DevOps Engineering."
authors = ["Ugochi Jones <ucacholonu@hotmail.com>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
awscliv2 = "^1.5.2"
dagster = "^0.13.5"
dagit = "^0.13.5"
dagster-aws = "^0.13.5"
dagster-pandas = "^0.13.5"
dagster-postgres = "^0.13.5"
dagster-slack = "^0.13.5"
dagster-docker = "^0.13.5"
dagster-k8s = "^0.13.5"
dagster-graphql = "^0.13.5"
pandas = "^1.3.4"
requests = "^2.26.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dependency = "^0.5.1"
pytest-runner = "^5.3.1"
pylint = "^2.11.1"
black = "^21.10b0"
unittest = "^0.0"
pre-commit = "^2.15.0"
pdoc3 = "^0.10.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dependency = "^0.5.1"
pytest-runner = "^5.3.1"
pylint = "^2.11.1"
black = "^21.10b0"
unittest = "^0.0"
pre-commit = "^2.15.0"
pdoc3 = "^0.10.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
